# stressed-pod

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.yml  Dockerfile  Dockerfile.dev  README.md  README.md   docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: main.yaml  pr.yaml
app/: main.py
app/managers/: lifecycle_manager.py  load_manager.py  log_manager.py  system_manager.py
app/models/: __init__.py  schemas.py
app/routers/: __init__.py  load.py  log_router.py  probes.py  system.py
app/scripts/: cpu_stress.py  memory_stress.py
tests/: conftest.py  test_api.py
tests/integration/: test_load_endpoints.py  test_log_api.py  test_probe_endpoints.py  test_system_endpoints.py
tests/unit/: test_load_manager.py  test_log_manager.py  test_schemas.py  test_system_manager.py
