[tool.poetry]
name = "stressed-pod"
version = "1.0.0"
description = "StressedPod: Simulate workloads on Kuvbernetes"
authors = ["Quentin SALLIO <q.sallio@gmail.com"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.4.2"
python-multipart = "^0.0.6"
psutil = "^5.9.6"

[tool.poetry.group.test.dependencies]
Flake8-pyproject = "^1.2.3"
pytest = "^8.3.3"
coverage = "^7.6.3"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.0.0"
isort = "^5.12.0"
httpx = "^0.25.0" 

[tool.flake8]
max-line-length = 150

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:SyntaxWarning"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"
markers = [
    "asyncio: mark test as async",
    "slow: mark test as slow running",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

